Fix glitches in the Toolbar

This CL fixes two glitches:
- It resizes the tappable area of the NTP's omnibox to prevent it from
   overlapping with the stack button.
- It puts the omnibox controls (clear and cancel) inside the safe area.

Bug: 777807, 777864
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I96ee42df3bbafe9a76f811b62b6ac2fbaff1f40e
Reviewed-on: https://chromium-review.googlesource.com/735327
Reviewed-by: Rohit Rao (ping after 24h) <rohitrao@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511150}
Former-commit-id: 08637853d9272c18d02c7c6225f54766cb935a1f